[gd_scene load_steps=2 format=3 uid="uid://bx4xg0y1k7hmd"]

[ext_resource type="Script" path="res://Rounds.gd" id="1_n521k"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n521k")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 265.5
offset_right = 634.5
offset_bottom = 1200.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="Round 1" type="Button" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Round 1"

[node name="Round 2" type="Button" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Round 2"

[node name="Round 3" type="Button" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Round 3"

[node name="Round 4" type="Button" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Round 4"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer2/Round 1" to="." method="_on_round_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Round 2" to="." method="_on_round_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Round 3" to="." method="_on_round_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Round 4" to="." method="_on_round_4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Back" to="." method="_on_back_pressed"]
