extends Control



func _on_round_1_pressed():
	get_tree().change_scene_to_file("res://scenes/Gardener.tscn")


func _on_round_2_pressed():
	pass # Replace with function body.


func _on_round_3_pressed():
	pass # Replace with function body.


func _on_round_4_pressed():
	pass # Replace with function body.


func _on_back_pressed():
	get_tree().change_scene_to_file("res://scenes/MainMenu.tscn")
